# NdkCmake

./: build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/ndkcmake/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/ndkcmake/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/ndkcmake/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
ndk_source/: build.gradle
ndk_source/src/androidTest/java/com/example/ndk_source/: ExampleInstrumentedTest.java
ndk_source/src/main/: AndroidManifest.xml
ndk_source/src/main/cpp/: CMakeLists.txt  native-lib.cpp
ndk_source/src/main/cpp/lame/function_realization/: Mp3Encoder.cpp  Mp3Encoder.h
ndk_source/src/main/java/com/example/ndk_source/: NativeProvider.java
ndk_source/src/main/java/com/example/ndk_source/base/: BaseActivity.java  BaseApplication.java
ndk_source/src/main/java/com/example/ndk_source/callback/: Callback.java
ndk_source/src/main/java/com/example/ndk_source/util/: GlobalAppContext.java  LogUtil.kt  ToastUtil.kt
ndk_source/src/test/java/com/example/ndk_source/: ExampleUnitTest.java
